finished rewriting Standings and unit test suite; will add Javadocs when I am certain it is in its final form