@@ -1,248 +1,377 @@
 package com.sadakatsu.game.domain;
 
+import com.google.common.collect.Lists;
+import com.google.common.collect.Maps;
 import com.sadakatsu.game.exceptions.InvalidPlayerException;
 import com.sadakatsu.game.exceptions.MismatchedPlaythroughException;
+import lombok.Getter;
 import lombok.NonNull;
-import org.apache.commons.collections4.CollectionUtils;
+import lombok.RequiredArgsConstructor;
 
 import javax.annotation.CheckForNull;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Set;
+import javax.validation.constraints.NotNull;
+import java.util.*;
+import java.util.function.BiFunction;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
-/**
- * <p>
- * The Standings class captures either a final or intermediate evaluation of how each Player participating in a game
- * playthrough is performing in comparison to the others.  It performs a pivotal role for the search algorithms, so one
- * implementing it must follow the contracts documented here carefully.
- * </p>
- * <p>
- * Each Standings implementation should be fully immutable.  This will assist with ensuring correctness of any
- * concurrent searches.
- * </p>
- * <p>
- * Each Standings implementation must implement equals() and hashCode() in reference to the participating Players and
- * their scores.  Different Standings instances created with the same inputs must be equal to each other.  These
- * Standings will be stored in Sets by the search algorithms.
- * </p>
- * <p>
- * Each Standings instance must track the Players participating in the game playthrough.  It would be best to calculate
- * an immutable Set of the players once, then reuse it for each Standings instance.
- * </p>
- * <p>
- * Each Standings implementation must track each Player's score.  If the implemented game has points, the Standings must
- * report those points for terminal State Standings instances.  Intermediate State Standings may use any heuristic
- * evaluation the implementer finds useful, but it is recommended that these correlate to the game's point system as
- * closely as possible to avoid problems.
- * </p>
- * <p>
- * Each Standings implementation must track each Player's ranking based upon his score using
- * <a href="https://en.wikipedia.org/wiki/Ranking#Standard_competition_ranking_(%221224%22_ranking)">standard
- * competition ranking</a>.  Player rankings will be queried by every <code>Standings::compareAgainst()</code> call
- * during the search, so the implementer should calculate and cache these rankings during instantiation.
- * </p>
- * <p>
- * Each Standings instance must track whether one Player is the "sole leader", meaning that one Player alone has the
- * most points.  It is recommended to cache this during instantiation, as the search algorithms are likely to check this
- * state many times.
- * </p>
- * <p>
- * Each Standings instance must implement subtract() to get the difference between two SCOREs.  The Standings interface
- * is designed to support any number of Players greater than zero and to support non-scalar scoring systems.  For
- * example, <a href="https://boardgamegeek.com/boardgame/9674/ingenious">Ingenious</a> tracks one score for each of six
- * colors for each Player.  It can also support the idea of teams, allowing for each Player to track both overall team
- * and individual performance scores in one SCORE object.  Unfortunately, this means that the library cannot guarantee
- * that a SCORE is a simple number capable of language-provided subtraction.  Therefore, the implementer must provide a
- * subtraction method that returns another SCORE instance that captures how much better or worse the callee is than the
- * argument.  This difference must be linearly scaled and be universally comparable (i.e., if
- * <code>subtract(a, b).compareTo(subtract(c, d)) == 0</code>, then a is exactly as much better than b as c is better
- * than d).  This may require some careful thought for complex scoring systems.
- * </p>
- * @param <PLAYER> the Player type for this game
- * @param <SCORE> the score type used to capture each Player's score/points; these must have a total ordering and
- *               support subtraction to retrieve a difference
- * @param <STANDINGS> the Standing implementation type against which this Standing implementation can be compared
- *                   against; should almost the same type (e.g., <code>public class ChessStandings implements
- *                   Standings&lt;ChessPlayer, Integer, ChessStandings&gt;</code>)
- */
-public interface Standings<
-    PLAYER extends Player,
-    SCORE extends Comparable<SCORE>,
-    STANDINGS extends Standings<PLAYER, SCORE, STANDINGS>
-> {
-    /**
-     * @return the Set of Players that are playing in the Game whose State's Standings are being captured
-     */
-    @NonNull Set<PLAYER> getParticipants();
+public class Standings<PLAYER extends Player, SCORE extends Comparable<SCORE>> {
+    private static class Distribution {
+        private final int count;
+        private final List<Integer> distribution;
+        private final Map<Integer, Integer> competitionScores;
 
-    /**
-     * <p>
-     * "Sole leadership" here means that the passed Player has the highest (and therefore winning) score, and that no
-     * other Player is tied with this Player to share the win.
-     * </p>
-     * <p>
-     * This method should be implemented to honor this definition.  This method is used by the search logic.  When
-     * searching for a Player who is the sole leader, the algorithms will prefer the shortest proven path among multiple
-     * alternatives to the minimax outcome.  This leads to elegant victories and decreasing opportunities for making
-     * mistakes.  When searching for other Players, the algorithms will attempt to prolong the game.  This emulates good
-     * fighting spirit and increases opportunities to catch up or even come back.
-     * </p>
-     * <p>
-     * If one's game implementation groups Players into teams, then this method must instead check that no other team
-     * matches this player's team's score.
-     * </p>
-     * @param player the Player whose sole leadership is being tested
-     * @return true iff the passed Player is the sole leader
-     * @throws InvalidPlayerException iff the passed Player is not participating in this game playthrough
-     */
-    boolean isSoleLeader(@NonNull PLAYER player) throws InvalidPlayerException;
+        Distribution(List<Integer> distribution) {
+            this.count = distribution.size();
+            this.distribution = distribution.stream()
+                .sorted()
+                .toList();
+            this.competitionScores = Maps.newHashMap();
+        }
 
-    /**
-     * <p>
-     * This method queries a Player's ranking against the other Players participating in the game using
-     * <a href="https://en.wikipedia.org/wiki/Ranking#Standard_competition_ranking_(%221224%22_ranking)">standard
-     * competition ranking</a>.  The winners have rank 1, and the other players have lower ranks based upon how their
-     * scores are sorted and tied.  Using this system will facilitate search so that players try to first optimize their
-     * ranking, then their sole leadership, and then their score.
-     * </p>
-     * <p>
-     * If one's game implementation groups Players into teams, then this method must return the whole team's ranking,
-     * even if individual team members' scores are tracked separately.
-     * </p>
-     * @param player the Player whose ranking is being queried
-     * @return 1 if the Player is in first place, 2 if the Player is in second place, etc.
-     * @throws InvalidPlayerException iff the passed Player is not participating in this game playthrough
-     */
-    int getRanking(@NonNull PLAYER player) throws InvalidPlayerException;
+        int getCompetitionScoreFor(int ranking) {
+            return competitionScores.getOrDefault(ranking, -1);
+        }
 
-    /**
-     * <p>
-     * This method returns the passed Player's score based upon whatever system is being used to evaluate how well the
-     * Player is playing.  Games with actual scores must report these scores for terminal States' Standings.
-     * Intermediate States' Standings or Standings for Games that do not have scores can use whatever scheme the
-     * implementer finds improves search performance, though it would still be good to try to reflective the game's
-     * actual score system if it exists.
-     * </p>
-     * <p>
-     * Team-based games with overall and individual scoring would likely benefit by using a SCORE type that can capture
-     * both values but emphasizes the overall score.  For example, a Player who sacrifices his own score to ensure his
-     * team gets a better overall score is playing properly minimax.  Maximizing one's one score is a liberty for a
-     * Player who has multiple outcomes that lead to his team having the same overall score.
-     * </p>
-     * @param player the Player whose score is being queried
-     * @return either the Player's actual score based upon search to a terminal node or a heuristic score that is
-     * designed to steer search toward more promising results
-     * @throws InvalidPlayerException iff the passed Player is not participating in this game playthrough
-     */
-    @NonNull SCORE getScore(@NonNull PLAYER player) throws InvalidPlayerException;
+        void setCompetitionScoreFor(int ranking, int competitionScore) {
+            competitionScores.put(ranking, competitionScore);
+        }
 
-    /**
-     * Alas, Java does not have operator overloading, so I cannot enforce that SCORE has some method to subtract one
-     * score from another.  Therefore, Standings implementations must provide this subtraction here to support the
-     * default compareAgainst implementation
-     * @param minuend the first number in the subtraction operation; the left-hand side
-     * @param subtrahend the second number in the subtraction operation; the right-hand side
-     * @return the difference (minuend - subtrahend)
-     */
-    SCORE subtract(@NonNull SCORE minuend, @NonNull SCORE subtrahend);
+        int compareFor(@NotNull Distribution rhs, int ranking) {
+            int comparison = 0;
 
-    /**
-     * <p>
-     * This method returns a value that encodes whether this Standings represents a better result for the passed Player
-     * than the passed Standings (<code>that</code>) does.  The value is positive if this Standings is better, zero if
-     * the two are equivalent, and negative if this Standings is worse.
-     * </p>
-     * <p>
-     * The Standings class provides a default implementation that is likely to provide optimal minimax sorting in every
-     * case.  It uses the following hierarchical reasoning to convert any game into a zero-sum game.
-     * </p>
-     * <ol>
-     *     <li>It is better to rank higher than lower.  First place is much better than Nth.</li>
-     *     <li>
-     *         It is better to share one's rank with as few players as possible.  Sharing one's rank with zero players
-     *         is much better than sharing it with N-1 players.  However, by the first rule, it is better to rank
-     *         higher and share that rank than to rank lower.
-     *     </li>
-     *     <li>
-     *         If one has ranked lower than other players, it is better to have prevented as many of them as possible
-     *         from tying each other, as it means one has failed in damaging their performances as much as possible.
-     *     </li>
-     * </ol>
-     * <p>
-     * Note that these rules say nothing about how to evaluate a player's opponents that ranked worse than the opponent.
-     * I found that freezing a player's gain/loss in reference to those players' performances eliminates strategies
-     * where losing players accept worse point-based performances to hurt the leaders' gains more.  This ensures the
-     * game remains competitive.
-     * </p>
-     * <p>
-     * Here is an example conversion of a four-player game into a zero-sum game using these concepts.  Such a gain/loss
-     * system guarantees that rational agents will try to rank as well as possible:
-     * </p>
-     * <ol>
-     *     <li>First place, not shared : (1, ?, ?, ?) : +39 </li>
-     *     <li>First place, shared with one : (1, 1, ?, ?) : +23</li>
-     *     <li>First place, shared with two : (1, 1, 1, 4) : +9</li>
-     *     <li>Draw (four-way tie) : (1, 1, 1, 1) : +0</li>
-     *     <li>Second place, not shared : (2, 1, ?, ?) : -1</li>
-     *     <li>Second place, shared with one : (2, 1, 2, 4) : -7</li>
-     *     <li>Second place, shared with two : (2, 1, 2, 2) : -13</li>
-     *     <li>Third place, not shared, held player back in second : (3, 1, 2, 4) : -14</li>
-     *     <li>Third place, shared, held player back in second : (3, 1, 2, 3) : -19</li>
-     *     <li>Third place, not shared, allowed tie for first : (3, 1, 1, 4): -20</li>
-     *     <li>Third place, shared, allowed tie for first : (3, 1, 1, 3): -23</li>
-     *     <li>Last place, permitted no ties : (4, 1, 2, 3) : -24</li>
-     *     <li>Last place, allowed tie for second : (4, 1, 2, 2) : -25</li>
-     *     <li>Last place, allowed two-way tie for first : (4, 1, 1, 3) : -26</li>
-     *     <li>Last place, allowed three-way tie for first : (4, 1, 1, 1) : -27</li>
-     * </ol>
-     * <p>
-     * Let's suppose that one player places first, two tie for second, and the fourth takes fourth place.  The sum of
-     * gains and losses by this scheme is 39 - 7 - 7 - 25 = 0.  All three of the last place players would have preferred
-     * that one of the two second place players had not tied.  However, neither of the second place players nor the
-     * fourth place managed to force one of them to rank worse, so all of them performed worse than they could have.
-     * If they had, the sum would be 39 - 1 - 14 - 24 = 0; the third place has performed worse, and second and fourth
-     * place have performed better.  Nobody was able to touch first place's performance, so his gain remains untouched.
-     * This means there are opportu
-     * </p>
-     * @param that the Standings against which to compare this Standings's results
-     * @param player the Player from whose perspective the two Standings must be compared
-     * @return a positive value if this Standings is a better result for the passed Player, 0 if the two Standings are
-     *   equivalent as far as the current Player is concerned, a negative value otherwise
-     * @throws MismatchedPlaythroughException when the two Standings instances do not have the same set of participants
-     * @throws InvalidPlayerException when the passed Player is not participating in the current game playthrough
-     */
-    default int compareAgainst(
-        @CheckForNull STANDINGS that,
-        @NonNull PLAYER player
-    ) throws MismatchedPlaythroughException, InvalidPlayerException {
-        int comparison;
+            if (!hasRanking(ranking)) {
+                comparison = rhs.hasRanking(ranking) ? -1 : 0;
+            } else if (!rhs.hasRanking(ranking)) {
+                comparison = 1;
+            } else {
+                boolean stillCare = true;
+                // Developer's Note: (J. Craig, 2022-07-19)
+                // I originally had this written in my preferred way (short-circuits, then bounds check):
+                //  comparison == 0 && stillCare && i < count
+                // JaCoCo showed that the loop always finishes before "i < count" was false.
+                // So, um, being a bit courageous here  >_<
+                for (int i = 0; comparison == 0 && stillCare; ++i) {
+                    final var lhsValue = distribution.get(i);
+                    final var rhsValue = rhs.distribution.get(i);
+                    if (lhsValue > ranking && rhsValue > ranking) {
+                        stillCare = false;
+                    } else {
+                        comparison = lhsValue - rhsValue;
+                    }
+                }
+            }
 
-        final var participants = getParticipants();
+            return comparison;
+        }
 
+        public boolean hasRanking(int ranking) {
+            return distribution.get(ranking - 1) == ranking;
+        }
+    }
+
+    record Initializer<P extends Player, S extends Comparable<S>>(
+        @NonNull P key,
+        @NonNull S value
+    ) implements Map.Entry<P, S> {
+        public static <P extends Player, S extends Comparable<S>> Initializer<P, S> of(
+            @NonNull P player,
+            @NonNull S score
+        ) {
+            return new Initializer<>(player, score);
+        }
+
+        @Override
+        public P getKey() {
+            return key;
+        }
+
+        @Override
+        public S getValue() {
+            return value;
+        }
+
+        @Override
+        public S setValue(S value) {
+            throw new UnsupportedOperationException("StandingsInitializers are immutable.");
+        }
+    }
+
+    private static final Map<Integer, Map<List<Integer>, Distribution>> CACHE = Maps.newConcurrentMap();
+
+    private static synchronized Map<List<Integer>, Distribution> getCompetitionCacheFor(int playerCount) {
+        return CACHE.computeIfAbsent(
+            playerCount,
+            Standings::buildCacheFor
+        );
+    }
+
+    private static Map<List<Integer>, Distribution> buildCacheFor(int playerCount) {
+        final var distributions = getAllDistributions(playerCount);
+        final var count = distributions.size();
+
+        var baseCompetitionScore = 1;
+        for (var ranking = 1; ranking <= playerCount; ++ranking) {
+            final var rankingCopy = ranking;
+            distributions.sort((lhs, rhs) -> rhs.compareFor(lhs, rankingCopy));
+
+            Distribution previous = null;
+            int i;
+            int offset = 0;
+            for (i = 0; i < count; ++i) {
+                final var distribution = distributions.get(i);
+                if (!distribution.hasRanking(ranking)) {
+                    break;
+                } else if (previous != null && previous.compareFor(distribution, ranking) > 0) {
+                    offset = i;
+                }
+
+                distribution.setCompetitionScoreFor(ranking, baseCompetitionScore + offset);
+                previous = distribution;
+            }
+
+            baseCompetitionScore += i;
+        }
+
+        return distributions.stream()
+            .collect(Collectors.toMap(x -> x.distribution, Function.identity()));
+    }
+
+    private static List<Distribution> getAllDistributions(int playerCount) {
+        // Developer's Note: (J. Craig, 2022-07-18)
+        // Getting all ranking distributions for a player count is pretty simple.  There must always be at least one
+        // player in first place.  Every other placement is either tied with the previous placement or worse.  We do not
+        // need to know which Player earned which place, as we are trying to determine how to assign outcomes to each
+        // Distribution/ranking combination to optimize game searching.
+        //
+        // That means that, for N players, there are 2^(N-1) possible Distributions.
+        final var distributionCount = 1 << (playerCount - 1);
+        final List<Distribution> distributions = Lists.newArrayListWithExpectedSize(playerCount);
+
+        final var worse = new boolean[playerCount - 1];
+        for (var i = 0; i < distributionCount; ++i) {
+            var ranking = 1;
+            final List<Integer> rankings = Lists.newArrayListWithExpectedSize(playerCount);
+            rankings.add(1);
+            for (var j = 1; j < playerCount; ++j) {
+                if (worse[j - 1]) {
+                    ranking = j + 1;
+                }
+                rankings.add(ranking);
+            }
+
+            final var distribution = new Distribution(rankings);
+            distributions.add(distribution);
+
+            if (i + 1 < distributionCount) {
+                boolean working = true;
+                for (var j = playerCount - 2; working; --j) {
+                    if (worse[j]) {
+                        worse[j] = false;
+                    } else {
+                        worse[j] = true;
+                        working = false;
+                    }
+                }
+            }
+        }
+
+        return distributions;
+    }
+
+    private static <
+        P extends Player,
+        S extends Comparable<S>
+    > Iterable<Initializer<P, S>> convertToListOrError(@CheckForNull Initializer<P, S>[] entries) {
+        if (entries == null) {
+            throw new NullPointerException("The entries array may not be null.");
+        } else if (entries.length == 0) {
+            throw new IllegalArgumentException("You must provide entries to set the Player Scores.");
+        }
+        return Arrays.asList(entries);
+    }
+
+    @RequiredArgsConstructor
+    private class Performance {
+        final PLAYER player;
+
+        @Getter
+        final SCORE score;
+
+        @Getter
+        int ranking;
+
+        @Getter
+        int competitiveScore;
+
+        @Override
+        public String toString() {
+            return String.format(
+                "{ %s : %d (%d, %s) }",
+                player,
+                ranking,
+                competitiveScore,
+                score
+            );
+        }
+    }
+
+    private final boolean maximizeScore;
+    private final BiFunction<SCORE, SCORE, SCORE> subtract;
+    private final Map<PLAYER, Performance> performances;
+    private PLAYER first;
+
+    @Getter
+    private final Set<PLAYER> participants;
+
+    private final int participantCount;
+
+    @SafeVarargs
+    public Standings(
+        boolean maximizeScore,
+        BiFunction<SCORE, SCORE, SCORE> subtract,
+        Initializer<PLAYER, SCORE>...entries
+    ) {
+        this(
+            maximizeScore,
+            subtract,
+            convertToListOrError(entries)
+        );
+    }
+
+    public Standings(
+        boolean maximizeScore,
+        @NonNull BiFunction<SCORE, SCORE, SCORE> subtract,
+        @NonNull Iterable<Initializer<PLAYER, SCORE>> entries
+    ) {
+        this.maximizeScore = maximizeScore;
+        this.subtract = subtract;
+
+        this.performances = recordPlayerScores(entries);
+        this.participants = cacheParticipants();
+        this.participantCount = participants.size();
+        rankPerformances();
+        scoreCompetition();
+    }
+
+    private Map<PLAYER, Performance> recordPlayerScores(Iterable<Initializer<PLAYER, SCORE>> entries) {
+        var first = true;
+        final Map<PLAYER, Performance> scratch = Maps.newHashMap();
+        for (final var entry : entries) {
+            if (entry == null) {
+                throw new IllegalArgumentException("None of the entries may be null.");
+            }
+            final var player = entry.getKey();
+            if (scratch.containsKey(player)) {
+                throw new IllegalArgumentException("None of the Players may be repeated.");
+            } else if (first) {
+                first = false;
+                this.first = player;
+            }
+
+            final var score = entry.getValue();
+            final var performance = new Performance(player, score);
+            scratch.put(player, performance);
+        }
+
+        if (maximizeScore && scratch.isEmpty()) {
+            throw new IllegalArgumentException(
+                "A game where one attempts to maximize one's score needs at least one Player."
+            );
+        } else if (!maximizeScore && scratch.size() < 2) {
+            throw new IllegalArgumentException(
+                "A game where one does not attempt to maximize one's score needs at least two Players."
+            );
+        }
+
+        return scratch;
+    }
+
+    private Set<PLAYER> cacheParticipants() {
+        return Collections.unmodifiableSet(performances.keySet());
+    }
+
+    private void rankPerformances() {
+        final List<Performance> sorted = performances.values()
+            .stream()
+            .sorted(
+                Comparator.comparing(Performance::getScore)
+                    .reversed()
+            )
+            .toList();
+
+        var first = sorted.get(0);
+        var previousScore = first.score;
+        var ranking = 1;
+        first.ranking = 1;
+        for (int i = 1, count = sorted.size(); i < count; ++i) {
+            final var current = sorted.get(i);
+            final var currentScore = current.score;
+            if (previousScore.compareTo(currentScore) > 0) {
+                ranking = i + 1;
+            }
+            current.ranking = ranking;
+            previousScore = currentScore;
+        }
+    }
+
+    private void scoreCompetition() {
+        final var competitionCache = getCompetitionCacheFor(participantCount);
+
+        final var key = getSortedRankings();
+        final var distribution = competitionCache.get(key);
+        for (final var performance : performances.values()) {
+            performance.competitiveScore = distribution.getCompetitionScoreFor(performance.ranking);
+        }
+    }
+
+    private List<Integer> getSortedRankings() {
+        return performances.values()
+            .stream()
+            .map(Performance::getRanking)
+            .sorted()
+            .toList();
+    }
+
+    public int getCompetitiveScore(PLAYER player) {
+        return getPerformanceOrError(player).getCompetitiveScore();
+    }
+
+    private Performance getPerformanceOrError(@NonNull PLAYER player) {
         if (!participants.contains(player)) {
             throw new InvalidPlayerException();
-        } else if (that == null) {
+        }
+        return performances.get(player);
+    }
+
+    public int getRanking(PLAYER player) {
+        return getPerformanceOrError(player).getRanking();
+    }
+
+    public SCORE getScore(PLAYER player) {
+        return getPerformanceOrError(player).getScore();
+    }
+
+    public int compareFor(
+        @CheckForNull Standings<PLAYER, SCORE> rhs,
+        @CheckForNull PLAYER player
+    ) {
+        int comparison;
+
+        final var lhsPerformance = getPerformanceOrError(player);
+        if (rhs == null) {
             comparison = 1;
-        } else if (!CollectionUtils.isEqualCollection(participants, that.getParticipants())) {
+        } else if (maximizeScore != rhs.maximizeScore || !participants.equals(rhs.participants)) {
             throw new MismatchedPlaythroughException();
         } else {
-            final var thatRanking = that.getRanking(player);
-            final var thisRanking = this.getRanking(player);
-            comparison = thatRanking - thisRanking;
+            final var rhsPerformance = rhs.performances.get(player);
+            comparison = rhsPerformance.competitiveScore - lhsPerformance.competitiveScore;
 
-            if (comparison == 0) {
-                final var thatLeadership = that.isSoleLeader(player);
-                final var thisLeadership = this.isSoleLeader(player);
-                comparison = Boolean.compare(thisLeadership, thatLeadership);
+            if (comparison == 0 && maximizeScore) {
+                comparison = compareLeads(rhs, lhsPerformance, rhsPerformance);
 
                 if (comparison == 0) {
-                    comparison = compareScoreDifferences(that, participants, player);
-
-                    if (comparison == 0) {
-                        final var thatScore = that.getScore(player);
-                        final var thisScore = this.getScore(player);
-                        comparison = thisScore.compareTo(thatScore);
-                    }
+                    comparison = compareScores(lhsPerformance, rhsPerformance);
                 }
             }
         }
@@ -250,71 +379,70 @@ public interface Standings<
         return comparison;
     }
 
-    private int compareScoreDifferences(
-        Standings<PLAYER, SCORE, STANDINGS> that,
-        Set<PLAYER> participants,
-        PLAYER player
-    ) {
+    private int compareLeads(Standings<PLAYER, SCORE> rhs, Performance lhsPerformance, Performance rhsPerformance) {
         int comparison = 0;
 
-        final List<SCORE> thatDifferences = getDifferences(that, player, participants);
-        final List<SCORE> thisDifferences = getDifferences(this, player, participants);
-        for (int i = 0, count = participants.size(); comparison == 0 && i < count; ++i) {
-            final var thatDifference = thatDifferences.get(i);
-            final var thisDifference = thisDifferences.get(i);
-            comparison = thisDifference.compareTo(thatDifference);
+        final var lhsLeads = getLeads(lhsPerformance);
+        final var rhsLeads = rhs.getLeads(rhsPerformance);
+        for (int i = 0; comparison == 0 && i < participantCount; ++i) {
+            final var lhsLead = lhsLeads.get(i);
+            final var rhsLead = rhsLeads.get(i);
+            comparison = lhsLead.compareTo(rhsLead);
         }
 
         return comparison;
     }
 
-    private List<SCORE> getDifferences(
-        Standings<PLAYER, SCORE, STANDINGS> standings,
-        PLAYER player,
-        Set<PLAYER> participants
-    ) {
-        final var playerScore = standings.getScore(player);
-        return participants.stream()
-            .sorted(Comparator.comparing(standings::getRanking))
-            .map(participant -> subtract(playerScore, standings.getScore(participant)))
-            .toList();
+    private List<SCORE> getLeads(Performance reference) {
+        final var score = reference.score;
+        return performances.values()
+            .stream()
+            .map(performance -> subtract.apply(score, performance.score))
+            .sorted()
+            .collect(Collectors.toList());
     }
 
-    /**
-     * This helper method assists in comparing between two Standings when one or both of the variables might be null.
-     * If neither is null, this returns the same result as calling <code>lhs.compareAgainst(rhs, player)</code>.
-     * @param lhs the Standings on which to call <code>compareAgainst()</code>
-     * @param rhs the Standings which will be passed to <code>lhs.compareAgainst()</code>
-     * @param player the Player from whose perspective to compare the two Standings
-     * @param <PLAYER> the Player's type
-     * @param <SCORE> the Comparable type that captures each Player's score
-     * @param <STANDINGS> the type that both Standings must have to ensure reasonable comparisons
-     * @return <ul>
-     *     <li>a positive number if lhs is not null and rhs is null</li>
-     *     <li>zero if both lhs and rhs are null</li>
-     *     <li>a negative number if lhs is null and rhs is not null</li>
-     *     <li>whatever value lhs.compareAgainst(rhs, player) returns if neither are null</li>
-     * </ul>
-     * @throws MismatchedPlaythroughException when the two Standings instances do not have the same set of participants
-     * @throws InvalidPlayerException when the passed Player is not participating in the current game playthrough
-     */
-    static <
-        PLAYER extends Player,
-        SCORE extends Comparable<SCORE>,
-        STANDINGS extends Standings<PLAYER, SCORE, STANDINGS>
-    > int compareNullable(
-        @CheckForNull STANDINGS lhs,
-        @CheckForNull STANDINGS rhs,
-        @NonNull PLAYER player
-    ) throws MismatchedPlaythroughException, InvalidPlayerException {
-        int result;
-        if (lhs == null) {
-            result = rhs == null ? 0 : -1;
-        } else if (rhs == null) {
-            result = 1;
-        } else {
-            result = lhs.compareAgainst(rhs, player);
+    private int compareScores(Performance lhsPerformance, Performance rhsPerformance) {
+        final var lhsScore = lhsPerformance.score;
+        final var rhsScore = rhsPerformance.score;
+        return lhsScore.compareTo(rhsScore);
+    }
+
+    @Override
+    public String toString() {
+        return represent(first);
+    }
+
+    public String represent(PLAYER player) {
+        final var performance = getPerformanceOrError(player);
+
+        final var builder = new StringBuilder();
+
+        final var sorted = performances.values()
+            .stream()
+            .sorted(Comparator.comparing(Performance::getScore, Comparator.reverseOrder()))
+            .toList();
+
+        final var ranking = performance.ranking;
+        final var rankingDeltas = sorted.stream()
+            .map(p -> p.getRanking() - ranking)
+            .toList();
+
+        builder.append(rankingDeltas);
+        builder.append(" : ");
+
+        if (maximizeScore) {
+            final var score = performance.score;
+            final var leads = sorted.stream()
+                .map(p -> subtract.apply(score, p.getScore()))
+                .toList();
+
+            builder.append(leads);
+            builder.append(" : ");
         }
-        return result;
+
+        builder.append(sorted);
+
+        return builder.toString();
     }
 }
